--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -2838,7 +2838,7 @@
  URA_transport_reform: "Transport Reform"
  URA_transport_reform_desc: "There are too many passenger carriers in our region, and especially in Yekaterinburg. We intend to optimize such a large number of vehicles to reduce costs."
  URA_ekaterinburg_city: "Yekaterinburg-City"
- URA_ekaterinburg_city_desc: "Yekaterinburg-City  is a commercial district near the center of the city of Yekaterinburg, Russia. It is located on Boris Yeltsin Street on the embankment of the Iset River and is currently[when?] under development. The area occupies five hectares."
+ URA_ekaterinburg_city_desc: "Yekaterinburg-City  is a commercial district near the center of the city of Yekaterinburg, Russia. It is located on Boris Yeltsin Street on the embankment of the Iset River and is currently under development. The area occupies five hectares."
  URA_expo_arms_to_moscow: "Give Expo Arms to Moscow"
  URA_expo_arms_to_moscow_desc: "The Moscow government intends to take away our arms exhibition and hold it in its region. We think this will be a great solution.."
  URA_end_conflict: "End The Conflict: City Hall - Region"
@@ -3119,7 +3119,7 @@
  URA_romanov_gambia_influency: "Expand influence to [GAM.GetNameWithFlag]"
  URA_romanov_trinidad_influency: "Expand influence to [TRI.GetNameWithFlag]"
  ###########Monarchy Ural Tooltips###########
- URA_kazahrevoult_warning_tt: "§RArmed uprising§! §YRof the local Cossacks will begin in our western territories§!"
+ URA_kazahrevoult_warning_tt: "§RArmed uprising§! §Yof the local Cossacks will begin in our western territories§!"
  ###########COMMIES URAL###########
  ###########Commies Ural Focuses###########
  URA_communism_start: "The Communist Urals"
@@ -3225,7 +3225,7 @@
  URA_roizman_spirits: "Support the Ural Spirit"
  URA_roizman_spirits_desc: "The Uralians have always been patriots of their region, patriots of democracy and the fight against totalitarianism, we will only actively support this."
  URA_roizman_masks: "Law Enforcement Reform"
- URA_roizman_masks_desc: "Oligophrenes in Masks - Roizman exclaimed when he saw the state of law enforcement agencies. We will immediately begin reforms in this area."
+ URA_roizman_masks_desc: "Oligophrenic in Masks - Roizman exclaimed when he saw the state of law enforcement agencies. We will immediately begin reforms in this area."
  URA_roizman_dick_shot: "Support For Families"
  URA_roizman_dick_shot_desc: "A shot in the dick, Roizman loudly declared at one of his conferences about the demographic report. It is necessary to support young families and not drive them into slavery."
  URA_roizman_dirt_soul: "Comfortable City"
@@ -3235,7 +3235,7 @@
  URA_roizman_gibdd: "Anti-LGBT"
  URA_roizman_gibdd_desc: "We do not support such things, and we are not going to legalize them."
  URA_roizman_candelabra: "The Candelabra Question"
- URA_roizman_candelabra_desc: "In a decent society, I would fuck with a candelabrum for such a thing," Roizman replied, during his speech on religious tolerance in the Urals. We will fiercely defend any religion and will not allow any of them to take a dominant position.."
+ URA_roizman_candelabra_desc: "'In a decent society, I would fuck with a candelabrum for such a thing,' Roizman replied, during his speech on religious tolerance in the Urals. 'We will fiercely defend any religion and will not allow any of them to take a dominant position..'"
  URA_roizman_tv: "The TV Question"
  URA_roizman_tv_desc: "Grown by the TV - this is how Roizman commented on those who continued to vote for the Communist Party and other parties that personified the totalitarian past. We intend to get this TV mindset out of people's heads."
  URA_roizman_patriot: "The Question of Patriotism"
@@ -3295,7 +3295,7 @@
  URA_policy_china_desc: "We intend to establish partnership relations with this country"
  URA_policy_india: "Partnership with [RAJ.GetName]"
  URA_policy_india_desc: "We intend to establish partnership relations with this country"
- URA_policy_korea_north: "Partnership with [NKR.GetName]"
+ URA_policy_korea_north: "Partnership with [NKO.GetName]"
  URA_policy_korea_north_desc: "We intend to establish partnership relations with this country"
  URA_policy_korea_south: "Partnership with [KOR.GetName]"
  URA_policy_korea_south_desc: "We intend to establish partnership relations with this country"
@@ -3694,7 +3694,7 @@ expand_bars_batalions: "§YWe will create two§! £text_icon_bars §YBARS§! §Y
 out_factroies_tt: "Nationalizes §YTwo Factories§! from Foreign Buisness"
 KUB_adygeya_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GAdygeya§!"
 KUB_north_caucas_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GNorth Caucasus Republics§!"
-KUB_stavrapol_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GStavrapol SR§!"
+KUB_stavropol_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GStavropol SR§!"
 KUB_donskaya_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GDonskaya SR§!"
 KUB_black_sea_create_tt: "Now we will be able to create §GKuban-Black Sea Soviet Republic§!"
 kuban_ukraine_txt: "§YWe will improve relations with [UKR.GetNameWithFlag]§!"
@@ -3826,10 +3826,10 @@ kuban.22.d: "Kuban asks that Chechnya be placed under their control. According t
 kuban.22.a: "Let's give this region"
 kuban.22.b: "Chechnya is Russia!"
 
-kuban.24.t: "Question about Stavrapol"
-kuban.24.d: "Kuban asks that Stavrapol be placed under their control. According to them, they will provide better control over the region and continue the course of development of this region. In return they can offer us money in exchange for this region, as well as privileges for our companies and reduced duties for goods imported from our country, so we can lose the region, but increase the influence on Kuban and try to control it."
+kuban.24.t: "Question about Stavropol"
+kuban.24.d: "Kuban asks that Stavropol be placed under their control. According to them, they will provide better control over the region and continue the course of development of this region. In return they can offer us money in exchange for this region, as well as privileges for our companies and reduced duties for goods imported from our country, so we can lose the region, but increase the influence on Kuban and try to control it."
 kuban.24.a: "Let's give this region"
-kuban.24.b: "Stavrapol is Russia!"
+kuban.24.b: "Stavropol is Russia!"
 
 
 kuban.23.t: "Question about Rostov on Don"
@@ -4338,8 +4338,8 @@ KUB_bring_back_adygea: "Bring Back Adygea"
 KUB_bring_back_adygea_desc: "The Adygean workers must be brought back into our fold and freed from the oppression of the capitalist government."
 KUB_north_caucas_republics: "Terskaya SR"
 KUB_north_caucas_republics_desc: "In order to build an ideal communist state in southern Russia, we need to take control of the North Caucasus republics."
-KUB_stavrapolskaya_sr: "Stavropolskay SR"
-KUB_stavrapolskaya_sr_desc: "The Stavropol SR was already in our ranks, it is high time to bring it back under our control."
+KUB_stavropolskaya_sr: "Stavropolskay SR"
+KUB_stavropolskaya_sr_desc: "The Stavropol SR was already in our ranks, it is high time to bring it back under our control."
 KUB_donskaya_sr: "Donskaya SR"
 KUB_donskaya_sr_desc: "Our republics are similar to each other. We have one culture, one history, and we should become one state."
 KUB_revive_black_sea_rep: "Revive the Black Sea Soviet Republic"
