--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -1467,7 +1467,7 @@
  SOV.liberalism_alty: "£SOV_western_social_democrat33 (PP) Party of Progress"
  SOV.liberalism_alty_icon: "£SOV_western_social_democrat33"
  SOV.liberalism_alty_desc: "(Progressive Liberalism) Party of Progress (Russian: Partiya Progressa)\n\n Party of Progress is a progressive liberal party created by prominent russian political figure Alexsey Navalny. It's stands for anti-corruption, liberalism and market economy."
- SOV.liberalism_altyn: "£SOV_future Rossiya (RF) Russia of the Future"
+ SOV.liberalism_altyn: "£SOV_future (RF) Russia of the Future"
  SOV.liberalism_altyn_icon: "£SOV_future"
  SOV.liberalism_altyn_desc: "(Progressive Liberalism) Russia of the Future (Russian: Rossiya Budushchego)\n\n Russia of the Future is a progressive liberal party created by prominent russian political figure Alexsey Navalny. It's stands for anti-corruption, liberalism and market economy."
  SOV.liberalism_nat: "£SOV_narod (NDAN) NAROD"
@@ -1494,7 +1494,7 @@
  SOV.Communist-State_alt_desc: "(Democratic Socialism) Social Democratic Party of Russia (Russian: Sotsial-Demokraticheskaya Partiya Rossii)\n\n SDPR is the broad socialist party created from a Communist Party of the Russian Federation. It is Democratic Socialist and supports the policies of Perestroyka and Glasnost."
  SOV.Communist-State_alty: "£SOV_kpss (CPSU) Communist Party of the Soviet Union - §GCentre§!"
  SOV.Communist-State_alty_icon: "£SOV_kpss"
- SOV.Communist-State_alty_desc: "(Marxism-Leninism) Communist Party of the Soviet Union (Russian: Kommunisticheskaya Partiya Sovietskogo Soyuza)\n CPSU is the ruling party of the Soviet Union. Revived in 21 century, party still stands for Marxism-Leninism and Democratic Centralism."
+ SOV.Communist-State_alty_desc: "(Marxism-Leninism) Communist Party of the Soviet Union (Russian: Kommunisticheskaya Partiya Sovietskogo Soyuza)\n\n CPSU is the ruling party of the Soviet Union. Revived in 21 century, party still stands for Marxism-Leninism and Democratic Centralism."
  SOV.Conservative_dum: "£SOV_volodin (EDRF) Emergency Duma of the Russian Federation"
  SOV.Conservative_dum_icon: "£SOV_volodin"
  SOV.Conservative_dum_desc: "(Emergency Government) Emergency Duma of the Russian Federation (Russian: Chrezvychaynaya Duma Rossiyskoy Federatsii)\n\n An emergency session of the State Duma was convened against the backdrop of the PMC Wagner putsch. The Duma deputies voted by a majority in favor of creating an emergency government headed by Duma Speaker Vyacheslav Volodin."
@@ -1838,7 +1838,7 @@
  KBK.neutral_Social_icon: "£SOV_non_aligned_socialist_democrat"
  KBK.neutral_Social_1: "£SOV_non_aligned_socialist_democrat_1 Novyye Lyudi"
  KBK.neutral_Social_1_icon: "£SOV_non_aligned_socialist_democrat_1"
- KBK.Neutral_Autocracy: "£SOV_non_aligned_autocracy Partiya Vozrozhdeniya"
+ KBK.Neutral_Autocracy: "£SOV_non_aligned_autocracy Party of Rebirth"
  KBK.Neutral_Autocracy_icon: "£SOV_non_aligned_autocracy"
  KBK.Neutral_Autocracy_desc: ""
  KBK.Neutral_green: "£SOV_non_aligned_greens Zelenyye"
@@ -1939,7 +1939,7 @@
  KLM.neutral_Social_icon: "£SOV_social_ju"
  KLM.neutral_Social_1: "£SOV_non_aligned_socialist_democrat_1 Novyye Lyudi"
  KLM.neutral_Social_1_icon: "£SOV_non_aligned_socialist_democrat_1"
- KLM.Neutral_Autocracy: "£SOV_non_aligned_autocracy Partiya Vozrozhdeniya"
+ KLM.Neutral_Autocracy: "£SOV_non_aligned_autocracy Party of Rebirth"
  KLM.Neutral_Autocracy_icon: "£SOV_non_aligned_autocracy"
  KLM.Neutral_green: "£SOV_non_aligned_greens Zelenyye"
  KLM.Neutral_green_icon: "£SOV_non_aligned_greens"
@@ -2053,7 +2053,7 @@
  ING.Neutral_Libertarian_icon: "£SOV_free_rus"
  ING.Neutral_Libertarian_1: "£SOV_civic_power Grazhdanskaya Sila"
  ING.Neutral_Libertarian_1_icon: "£SOV_civic_power"
- ING.Neutral_Autocracy: "£SOV_non_aligned_autocracy Partiya Vozrozhdeniya"
+ ING.Neutral_Autocracy: "£SOV_non_aligned_autocracy Party of Rebirth"
  ING.Neutral_Autocracy_icon: "£SOV_non_aligned_autocracy"
  ING.Neutral_Autocracy_desc: ""
  ING.Neutral_Muslim_Brotherhood: "£ING_muslim_brotherhood Islamic Reconciliation Party"
