--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -43,7 +43,6 @@
  HOL_NAM_Rotterdam_desc: "Rotterdam, Europe's largest seaport and industrial hub, plays a vital role in the Netherlands' energy landscape. As a major transportation and logistics center, Rotterdam serves as a gateway for crude oil imports, refined product exports, and petrochemical manufacturing. The city's strategic location, extensive infrastructure, and innovative initiatives position it as a key player in the global energy transition."
  HOL_NAM_Pernis_Refineries: "Pernis Refineries"
  HOL_NAM_Pernis_Refineries_desc: "Pernis Refineries, operated by Royal Dutch Shell, form one of the largest refining complexes in Europe, located near Rotterdam. With its advanced facilities and integrated petrochemical plants, Pernis plays a crucial role in processing crude oil into a wide range of refined products, including fuels, lubricants, and chemical feedstocks, supporting the region's energy needs and industrial development."
-
  ### Economy
  HOL_Regio: "Regional Economy"
  HOL_Regio_desc: "While the Randstad thrives, it is crucial to ensure the prosperity of the rest of the Netherlands. Investing in the regio will balance economic growth and improve the quality of life across the country."
@@ -281,6 +280,8 @@
  HOL_Expanding_Naval_Infrastructure: "Expanding Naval Infrastructure"
  HOL_Expanding_Naval_Infrastructure_desc: " The Netherlands is committed to enhancing its naval presence by expanding its network of naval bases. This focus involves the development of new bases and the upgrading of existing facilities around the Dutch coastline and overseas territories. These expanded bases will provide strategic support for naval operations, improve logistics, and ensure rapid response capabilities."
  HOL_F35C_Development_tt: "When §Y5th Generation Light Aircraft§! is researched, §G50§! §YF-35C§! will be added to your stockpile."
+ HOL_Multi_Ocean_Training: "Multi-Ocean Training"
+ HOL_Multi_Ocean_Training_desc: "To prepare for diverse maritime challenges, the Dutch Navy will conduct extensive training exercises across multiple oceans. These exercises will improve interoperability with allied navies and enhance the operational readiness of Dutch naval forces in various environments."
  HOL_Rijksregiebureau_Maritieme_Industrie: "Rijksregiebureau Martitieme Industrie"
  HOL_Rijksregiebureau_Maritieme_Industrie_desc: "The establishment of the Rijksregiebureau Maritieme Maakindustrie marks a significant step towards centralizing and coordinating the maritime manufacturing industry in the Netherlands. This agency will streamline efforts to innovate and expand shipbuilding and marine engineering capabilities, ensuring that Dutch maritime industries remain competitive and technologically advanced."
  HOL_Maritiem_Masterplan: "Maritiem Masterplan"
@@ -702,6 +703,17 @@
  HOL_ING_Group_Strategies_Expansion_Speciality3_desc: "Corporate clients are a key focus of ING’s business. By specializing in wholesale banking, ING will enhance its ability to offer customized financial solutions to large enterprises, driving corporate growth and revenue."
  HOL_ING_Group_Strategies_Expansion_Speciality4: "ING Wealth Services"
  HOL_ING_Group_Strategies_Expansion_Speciality4_desc: "Wealth management offers high returns and long-term client relationships. Specializing in wealth management will allow ING to cater to high-net-worth individuals, increasing wealth income taxation and broadening its personal finance services."
+ HOL_Carrier_Production.01.USA.t: "The Netherlands Requests Carrier Production"
+ HOL_Carrier_Production.01.USA.d: "The Netherlands has requested assistance in producing a Gerald R. Ford Class carrier. Should we approve this request?"
+ HOL_Carrier_Production.01.USA.a: "Approve the request"
+ HOL_Carrier_Production.01.USA.b: "Deny the request"
+ HOL_Carrier_Production.02.HOL.t: "Carrier Production Approved"
+ HOL_Carrier_Production.02.HOL.d: "The United States has approved your request to begin production of the Gerald R. Ford Class carrier. The production line has been established."
+ HOL_Carrier_Production.02.HOL.a: "Acknowledge"
+ HOL_Carrier_Production.03.HOL.t: "Carrier Production Denied"
+ HOL_Carrier_Production.03.HOL.d: "The United States has denied your request to begin production of the Gerald R. Ford Class carrier. You may try again in 30 days."
+ HOL_Carrier_Production.03.HOL.a: "Acknowledge"
+
 
  ### Battalion
  HOL_marechaussee_support_tech: "Marechaussee Support Battalion"
