--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -3692,7 +3692,7 @@ we_national_batalion_tt: "§YWe will create a §Gnational battalion§! in [KUB.G
 bars_first_brigade_tt: "£text_icon_bars §YBARS§! §Ybattalion will be created§!"
 expand_bars_batalions: "§YWe will create two§! £text_icon_bars §YBARS§! §Ybattalions§!"
 out_factroies_tt: "Nationalizes §YTwo Factories§! from Foreign Buisness"
-KUB_adygeya_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GAdygeya§!"
+KUB_adygea_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GAdygea§!"
 KUB_north_caucas_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GNorth Caucasus Republics§!"
 KUB_stavropol_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GStavropol SR§!"
 KUB_donskaya_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GDonskaya SR§!"
@@ -3704,8 +3704,8 @@ escalation_with_rus_tt: "§RThis will escalate the conflict with [SOV.GetNameWit
 kuban_rus_invasion_tt: "§RWe will launch a military operation in the [KUB.GetNameWithFlag]§!"
 kuban_rus_civil_war_tt: "§RWe'll stage a pro-Russian[SOV.GetFlag] uprising in the [KUB.GetNameWithFlag]§!"
 referendum_donbass_tt: "We will hold §Greferendums§! in such regions as §YDonetsk and Luhansk§!. If §Y[UKR.GetNameWithFlag]§! agrees with their results, they will become part of our republic"
-south_russia_revolution_tt: "§RRevolution§! will begin in such regions as §YRostov On Don, Stavropol, Adygeya, Kalmykia, Astrakhan and Volgograd§!.§RWar§! will be declared §Y[SOV.GetNameWithFlag]§!"
-referndum_south_russia_tt:  "We will hold §Greferendums§! in such regions as §YRostov On Don, Stavropol, Adygeya, Kalmykia, Astrakhan and Volgograd§!. If §Y[SOV.GetNameWithFlag]§! agrees with their results, they will become part of our republic"
+south_russia_revolution_tt: "§RRevolution§! will begin in such regions as §YRostov On Don, Stavropol, Adygea, Kalmykia, Astrakhan and Volgograd§!.§RWar§! will be declared §Y[SOV.GetNameWithFlag]§!"
+referndum_south_russia_tt:  "We will hold §Greferendums§! in such regions as §YRostov On Don, Stavropol, Adygea, Kalmykia, Astrakhan and Volgograd§!. If §Y[SOV.GetNameWithFlag]§! agrees with their results, they will become part of our republic"
 arise_donbass_tt: "§RRevolution§! will begin in such regions as §YDonetsk and Luhansk§!.§RWar§! will be declared §Y[UKR.GetNameWithFlag]§!"
 KUB_anti_olighars_tt: "§RWe'll start a purge of the oligarchs§!"
 A_just_russia_from_rodina_tt: "§YThe §RRodina party§! will be renamed the §RJust Russia party§!§!"
@@ -3796,7 +3796,7 @@ kuban_invest.15.a: ""
 
 kuban.15.t: "Question about Adygea"
 kuban.15.d: "The Kuban deligation asks us to include the Republic of Adygea in their composition. According to them, it will be easier for them to manage this region than for us, and they have funds and a plan to improve and maintain Adygea in their structure."
-kuban.15.a: "Adygeya is Kuban."
+kuban.15.a: "Adygea is Kuban."
 kuban.15.b: "We run it pretty well ourselves."
 
 kuban.16.t: "Russia gave us Adygea"
@@ -3811,10 +3811,10 @@ kuban.14.t: "Kondratiev wins elections"
 kuban.14.d: "After a long era of Alexander Tkachev's rule, Veniamin Kondratiev becomes the new head of Kuban. He defeated his closest rivals from other parties by a huge margin and signalled a new era in the life of Kuban and its people."
 kuban.14.a: "Great"
 
-kuban.18.t: "Question about Adygeya"
-kuban.18.d: "Kuban asks that Adygeya be placed under their control. According to them, they will provide better control over the region and continue the course of development of this region. In return they can offer us money in exchange for this region, as well as privileges for our companies and reduced duties for goods imported from our country, so we can lose the region, but increase the influence on Kuban and try to control it."
+kuban.18.t: "Question about Adygea"
+kuban.18.d: "Kuban asks that Adygea be placed under their control. According to them, they will provide better control over the region and continue the course of development of this region. In return they can offer us money in exchange for this region, as well as privileges for our companies and reduced duties for goods imported from our country, so we can lose the region, but increase the influence on Kuban and try to control it."
 kuban.18.a: "Let's give this region"
-kuban.18.b: "Adygeya is Russia!"
+kuban.18.b: "Adygea is Russia!"
 
 kuban.21.t: "Question about North Caucasus Regions"
 kuban.21.d: "Kuban asks that North Caucasus Regions be placed under their control. According to them, they will provide better control over the region and continue the course of development of this region. In return they can offer us money in exchange for this region, as well as privileges for our companies and reduced duties for goods imported from our country, so we can lose the region, but increase the influence on Kuban and try to control it."
@@ -3859,7 +3859,7 @@ kuban.29.d: "Russia has refused to supply us with new weapons. We need to look f
 kuban.29.a: "Sad"
 
 kuban.30.t: "Question about Karachay Cherkessia"
-kuban.30.d: "Kuban asks that Rostov on Don be placed under their control. According to them, they will provide better control over the region and continue the course of development of this region. In return they can offer us money in exchange for this region, as well as privileges for our companies and reduced duties for goods imported from our country, so we can lose the region, but increase the influence on Kuban and try to control it."
+kuban.30.d: "Kuban asks that Karachay Cherkessia be placed under their control. According to them, they will provide better control over the region and continue the course of development of this region. In return they can offer us money in exchange for this region, as well as privileges for our companies and reduced duties for goods imported from our country, so we can lose the region, but increase the influence on Kuban and try to control it."
 kuban.30.a: "Let's give this region"
 kuban.30.b: "Karachay Cherkessia is Russia!"
 
@@ -3957,8 +3957,8 @@ kuban.50.d: "NATO does not want to accept us into the alliance because they are 
 kuban.50.a: "Sad."
 
 #Decisions
-KUB_unite_adyg: "Adygeya"
-KUB_unite_adyg_united_russia: "Adygeya"
+KUB_unite_adyg: "Adygea"
+KUB_unite_adyg_united_russia: "Adygea"
 KUB_terskaya_sr: "Terskaya SR"
 KUB_rostov_sr: "Donskaya SR"
 KUB_chechnya_sr: "Chechnya"
@@ -4037,8 +4037,8 @@ KUB_abinsk: "Abinsky Electrometallurgical Plant"
 KUB_abinsk_desc: "Abinsky Electrometallurgical Plant LLC (AEMP) is an iron and steel enterprise and producer of steel products in Russia, located in the city of Abinsk, Krasnodar Territory. The plant is part of the Novostal-M metallurgical holding company."
 KUB_slavaynsk_npz: "Slavyansk ECO"
 KUB_slavaynsk_npz_desc: "Slavyansk ECO is an oil refining company, one of the largest and most modern in the whole territory of Kuban."
-KUB_new_agroculturian_complexes: "New Agroculturian Complexes"
-KUB_new_agroculturian_complexes_desc: "New agro-cultural complexes need to be built to make farmers feel comfortable."
+KUB_new_agriculture_complexes: "New Agricultural Complexes"
+KUB_new_agriculture_complexes_desc: "New agro-cultural complexes need to be built to make farmers feel comfortable."
 KUB_develop_wb_ozon_ym: "Development of Online Stores"
 KUB_develop_wb_ozon_ym_desc: "Online Stores have been shown to be efficient and cost-effective. Therefore, it is necessary to help them to develop and co-operate in our region."
 #United Russia/Tkachev
@@ -4108,16 +4108,16 @@ KUB_rzd: "Contract With RZD"
 KUB_rzd_desc: "Partnership with Russian Railways should become even bigger"
 KUB_republic_status: "New Republic Status"
 KUB_republic_status_desc: "Kuban became quite independent and industrialised. We need to raise its priority in the system of regions of the Russian Federation."
-KUB_adygea_que: "Adygeya Question"
-KUB_adygea_que_desc: "Adygeya is a Kuban territory that illegally seceded from us. We need to get it back, by any means necessary. Assault or referendum, it doesn't matter, but Adygeya is only ours!"
+KUB_adygea_que: "Adygea Question"
+KUB_adygea_que_desc: "Adygea is a Kuban territory that illegally seceded from us. We need to get it back, by any means necessary. Assault or referendum, it doesn't matter, but Adygea is only ours!"
 KUB_molkino_training_center: "Molkino Training Center"
 KUB_molkino_training_center_desc: "PMC Wagner base in Molkino is the largest and most modern base of the company in the world. It can be used to train our soldiers and officers."
 KUB_rosgvardia: "Rosgvardia Batalions"
 KUB_rosgvardia_desc: "Rosgvardia - the federal executive authority responsible for the development and implementation of state policy and normative-legal regulation in the sphere of activities of the National Guard Troops of the Russian Federation, in the sphere of arms turnover, in the sphere of private security activities, in the sphere of private detective activities and in the sphere of extra-departmental protection."
-KUB_revive_factories_agro: "Construction of New Agrocultural Complexes"
+KUB_revive_factories_agro: "Construction of New Agricultural Complexes"
 KUB_revive_factories_agro_desc: "Kuban is the breadwinner of Russia, and in order to maintain this status, we need to restore our agro-cultural complexes."
 KUB_russian_banks_edro: "Russian Banks"
-KUB_russian_banks_edro_desc: "Russian banks are slowly starting to enter the territory of our peninsula"
+KUB_russian_banks_edro_desc: "Russian banks are slowly starting to enter the territory of our republic."
 KUB_russian_it_companies: "Russian IT Companies"
 KUB_russian_it_companies_desc: "Yandex is a Russian multinational information technology company, which owns the Internet search engine of the same name, an Internet portal and web services in several countries. Its most prominent position is in the markets of Russia, Belarus and Kazakhstan"
 KUB_army_question: "Army Question"
@@ -4207,8 +4207,8 @@ KUB_russian_legacy: "Russian Heritage"
 KUB_russian_legacy_desc: "For hundreds of years we have not been separated from Russia and its people. We are part of the great Russian society and we are always together!"
 KUB_russian_banks: "Russian Banks"
 KUB_russian_banks_desc: "Russian banks are among the most reliable and technologically advanced in the world, so why not invite them to Kuban?"
-KUB_return_adygea: "Return Adygeya"
-KUB_return_adygea_desc: "Adygeya is a Kuban territory that illegally seceded from us. We need to get it back, by any means necessary. Assault or referendum, it doesn't matter, but Adygeya is only ours!"
+KUB_return_adygea: "Return Adygea"
+KUB_return_adygea_desc: "Adygea is a Kuban territory that illegally seceded from us. We need to get it back, by any means necessary. Assault or referendum, it doesn't matter, but Adygea is only ours!"
 KUB_return_karachaevo_cherkesia: "Return Karachaevo -Cherkessia"
 KUB_return_karachaevo_cherkesia_desc: "Karachayevo-Cherkessia is obliged to be part of us geographically, and this is a fact!"
 KUB_own_way: "Own Way"
@@ -4282,7 +4282,7 @@ KUB_military_exercises_with_russia_dems: "Millitary Exercises with Russia"
 KUB_military_exercises_with_russia_dems_desc: "The Russian army is one of the strongest in the world. So why don't we have an exercise with them?"
 KUB_rus_academies: "Russian Academies"
 KUB_rus_academies_desc: "Russian military academies are the best in the world. We can ask the Russians to accept our students and learn from their experience."
-KUB_adygea: "Adygeya Question"
+KUB_adygea: "Adygea Question"
 KUB_adygea_desc: "Adygea has always been part of Kuban. We must give it back, but we must do it humanely through a referendum."
 KUB_anti_russia_policy: "Anti-Russian Policy"
 KUB_anti_russia_policy_desc: "Russia is an aggressor, and co-operation with it will not lead to good things. We need to convince our population of this."
@@ -4414,11 +4414,11 @@ KUB_new_people_cossack: "Mobilisation"
 KUB_new_people_cossack_desc: "We need more men for our army. We need to expand the mobilisation flow."
 KUB_cossak_cadets: "Cossack Cadet Corps"
 KUB_cossak_cadets_desc: "The younger generation who want to join the army should also have the opportunity to do so. It is necessary to restore the cadet corps."
-KUB_new_cossak_batalions: "New Cossack Batalions"
-KUB_new_cossak_batalions_desc: "As we have recruited the required number of men, we must form battalions for further service in the ranks of our army."
+KUB_new_cossack_battalions: "New Cossack Battalions"
+KUB_new_cossack_battalions_desc: "As we have recruited the required number of men, we must form battalions for further service in the ranks of our army."
 KUB_cossak_militia: "Cossack Militia"
 KUB_cossak_militia_desc: "To ensure complete control on the streets of our country, new militia units should be introduced to patrol the cities."
-KUB_infra_cossack: "Infrastructure Improvment"
+KUB_infra_cossack: "Infrastructure Improvement"
 KUB_infra_cossack_desc: "Our country needs a new, modern and reliable infrastructure."
 KUB_cis_cossack: "Cooperation with CIS Cossacks"
 KUB_cis_cossack_desc: "There are a large number of Cossacks throughout the CIS. We can attract them to our army as volunteers."
@@ -4426,9 +4426,9 @@ KUB_rus_cossack: "Cossacks of Russa"
 KUB_rus_cossack_desc: "The Union of Cossacks of Russia is an all-Russian public organisation formed on 29 June 1990 in accordance with the decision of the constituent circle of Cossacks from the entire territory of the Soviet Union."
 KUB_patriots_cossack: "Patriotism"
 KUB_patriots_cossack_desc: "Every man is a Cossack."
-KUB_union_of_south_cossaks: "Union of Southern Russia Cossaks"
-KUB_union_of_south_cossaks_desc: "The Union of Southern Russia Cossaks is an organisation uniting the Cossacks of Russia living in the Rostov Region, the North Caucasus and Stavropol."
-KUB_union_of_siberian_cossaks: "Union of Eastern Siberia Cossaks"
+KUB_union_of_south_cossaks: "Union of Southern Russia Cossacks"
+KUB_union_of_south_cossaks_desc: "The Union of Southern Russia Cossacks is an organisation uniting the Cossacks of Russia living in the Rostov Region, the North Caucasus and Stavropol."
+KUB_union_of_siberian_cossaks: "Union of Eastern Siberia Cossacks"
 KUB_union_of_siberian_cossaks_desc: "The Union of Cossacks of Siberia and the Far East is an organisation uniting Cossacks of Russia living in Siberia, the Far East."
 KUB_cossaks_new_millennium: "Cossacks of New Millennium"
 KUB_cossaks_new_millennium_desc: "With the revival of Cossack culture, the people once again remembered and took the path of their ancestors. We are descendants of the great Cossacks and we will continue their work!"
