--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -675,6 +675,57 @@
  HOL_FAD.06_NOR.t: "Norway Joins the Future Air Defender Project"
  HOL_FAD.06_NOR.d: "Norway has agreed to join the Future Air Defender project, bringing their own experience in Arctic and Northern naval operations to the table. The Netherlands will benefit from their contribution, receiving an additional destroyer, tentatively named the **HNLMS Karel Doorman**, after our renowned admiral who helped shape the modern Dutch Navy."
  HOL_FAD.06_NOR.a: "Norway secures our northern flank!"
+ HOL_Carrier_Production.01.USA.t: "The Netherlands Requests Carrier Production"
+ HOL_Carrier_Production.01.USA.d: "The Netherlands has requested assistance in producing a Gerald R. Ford Class carrier. Should we approve this request?"
+ HOL_Carrier_Production.01.USA.a: "Approve the request"
+ HOL_Carrier_Production.01.USA.b: "Deny the request"
+ HOL_Carrier_Production.02.HOL.t: "Carrier Production Approved"
+ HOL_Carrier_Production.02.HOL.d: "The United States has approved your request to begin production of the Gerald R. Ford Class carrier. The production line has been established."
+ HOL_Carrier_Production.02.HOL.a: "Acknowledge"
+ HOL_Carrier_Production.03.HOL.t: "Carrier Production Denied"
+ HOL_Carrier_Production.03.HOL.d: "The United States has denied your request to begin production of the Gerald R. Ford Class carrier. You may try again in 30 days."
+ HOL_Carrier_Production.03.HOL.a: "Acknowledge"
+ HOL_Carrier_Production.01.UK.t: "The Netherlands Requests Carrier Production"
+ HOL_Carrier_Production.01.UK.d: "The Netherlands has requested assistance in producing a Queen Elizabeth Class carrier. Should we approve this request?"
+ HOL_Carrier_Production.01.UK.a: "Approve the request"
+ HOL_Carrier_Production.01.UK.b: "Deny the request"
+ HOL_Carrier_Production.02.HOL.t: "Carrier Production Approved"
+ HOL_Carrier_Production.02.HOL.d: "The United Kingdom has approved your request to begin production of the Queen Elizabeth Class carrier. The production line has been established."
+ HOL_Carrier_Production.02.HOL.a: "Acknowledge"
+ HOL_Carrier_Production.03.HOL.t: "Carrier Production Denied"
+ HOL_Carrier_Production.03.HOL.d: "The United Kingdom has denied your request to begin production of the Queen Elizabeth Class carrier. You may try again in 30 days."
+ HOL_Carrier_Production.03.HOL.a: "Acknowledge"
+ HOL_Carrier_Production.01.FRA.t: "The Netherlands Requests Carrier Production"
+ HOL_Carrier_Production.01.FRA.d: "The Netherlands has requested assistance in producing a Charles de Gaulle Class carrier. Should we approve this request?"
+ HOL_Carrier_Production.01.FRA.a: "Approve the request"
+ HOL_Carrier_Production.01.FRA.b: "Deny the request"
+ HOL_Carrier_Production.02.HOL.t: "Carrier Production Approved"
+ HOL_Carrier_Production.02.HOL.d: "France has approved your request to begin production of the Charles de Gaulle Class carrier. The production line has been established."
+ HOL_Carrier_Production.02.HOL.a: "Acknowledge"
+ HOL_Carrier_Production.03.HOL.t: "Carrier Production Denied"
+ HOL_Carrier_Production.03.HOL.d: "France has denied your request to begin production of the Charles de Gaulle Class carrier. You may try again in 30 days."
+ HOL_Carrier_Production.03.HOL.a: "Acknowledge"
+ HOL_Carrier_Production.01.RUS.t: "The Netherlands Requests Carrier Production"
+ HOL_Carrier_Production.01.RUS.d: "The Netherlands has requested assistance in producing an Admiral Kuznetsov Class carrier. Should we approve this request?"
+ HOL_Carrier_Production.01.RUS.a: "Approve the request"
+ HOL_Carrier_Production.01.RUS.b: "Deny the request"
+ HOL_Carrier_Production.02.HOL.t: "Carrier Production Approved"
+ HOL_Carrier_Production.02.HOL.d: "Russia has approved your request to begin production of the Admiral Kuznetsov Class carrier. The production line has been established."
+ HOL_Carrier_Production.02.HOL.a: "Acknowledge"
+ HOL_Carrier_Production.03.HOL.t: "Carrier Production Denied"
+ HOL_Carrier_Production.03.HOL.d: "Russia has denied your request to begin production of the Admiral Kuznetsov Class carrier. You may try again in 30 days."
+    HOL_Carrier_Production.03.HOL.a: "Acknowledge"
+ HOL_Carrier_Production.01.CHN.t: "The Netherlands Requests Carrier Production"
+ HOL_Carrier_Production.01.CHN.d: "The Netherlands has requested assistance in producing a Shandong Class carrier. Should we approve this request?"
+ HOL_Carrier_Production.01.CHN.a: "Approve the request"
+ HOL_Carrier_Production.01.CHN.b: "Deny the request"
+ HOL_Carrier_Production.02.HOL.t: "Carrier Production Approved"
+ HOL_Carrier_Production.02.HOL.d: "China has approved your request to begin production of the Shandong Class carrier. The production line has been established."
+ HOL_Carrier_Production.02.HOL.a: "Acknowledge"
+ HOL_Carrier_Production.03.HOL.t: "Carrier Production Denied"
+ HOL_Carrier_Production.03.HOL.d: "China has denied your request to begin production of the Shandong Class carrier. You may try again in 30 days."
+ HOL_Carrier_Production.03.HOL.a: "Acknowledge"
+
  ### Decisions
  HOL_ING_Group_strategy_category: "ING Group Strategies"
  HOL_ING_Group_strategy_category_desc: "As global economic cycles shift between periods of growth and recession, ING Bank is poised to capitalize on these fluctuations. Through a series of calculated financial maneuvers, ING can extend its influence over national and international markets, steering both recovery efforts and expansion booms. These decisions offer the Netherlands the ability to leverage the bank's financial clout to stimulate growth, manage risk, and maximize investment returns. By strategically adjusting loan policies, boosting consumer spending, and expanding global trade networks, ING will not only strengthen its market position but also solidify the Netherlands' standing as a financial powerhouse."
