--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -1930,8 +1930,8 @@
  BSH_agro_investition_desc: "Investing in Farms"
  BSH_private_farms: "Supporting Local Producers"
  BSH_private_farms_desc: "Supporting Local Producers"
- BSH_agroculture: "Ministry of Agriculture"
- BSH_agroculture_desc: "The Ministry of Agriculture will help us to better solve problems in the field of agricultural support of the republic"
+ BSH_agriculture: "Ministry of Agriculture"
+ BSH_agriculture_desc: "The Ministry of Agriculture will help us to better solve problems in the field of agricultural support of the republic"
  BSH_medicine: "Increase Medical Support"
  BSH_medicine_desc: "We will support our healthcare system financially"
  BSH_rkb: "Republican Clinical Hospital"
@@ -3647,7 +3647,7 @@
  KUB_fuel: "Kuban Fuel"
 #ideas
 KUB_decline_of_tourism: "Decline of Tourism"
-KUB_destroyed_agroculture: "Destroyed Agriculture"
+KUB_destroyed_agriculture: "Destroyed Agriculture"
 KUB_olympic_preparation: "Preparation for Olympic Games"
 KUB_krasnaya_polyana: "Krasnaya Polyana Resort"
 KUB_kuban_tourism: "Tourism in Kuban"
@@ -3691,7 +3691,7 @@ KUB_become_higher_tt: "§G[KUB.GetName] will become a National Republic in [SOV.
 we_national_batalion_tt: "§YWe will create a §Gnational battalion§! in [KUB.GetNameWithFlag]§!"
 bars_first_brigade_tt: "£text_icon_bars §YBARS§! §Ybattalion will be created§!"
 expand_bars_batalions: "§YWe will create two§! £text_icon_bars §YBARS§! §Ybattalions§!"
-out_factroies_tt: "Nationalizes §YTwo Factories§! from Foreign Buisness"
+out_factroies_tt: "Nationalizes §YTwo Factories§! from Foreign Business"
 KUB_adygea_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GAdygea§!"
 KUB_north_caucas_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GNorth Caucasus Republics§!"
 KUB_stavropol_russia_tt: "Now we will be able to offer [SOV.GetNameWithFlag] to give us - §GStavropol SR§!"
@@ -3981,8 +3981,8 @@ KUB_restore_krasnya_polyana_resort: "Krasnaya Polyana"
 KUB_restore_krasnya_polyana_resort_desc: "Krasnaya Polyana Resort is an all-season “resort town” in the Estosadok village of Sochi. It was built for the 2014 Sochi Olympics and is now one of the most popular resorts in the entire South of Russia."
 KUB_tourism_hub: "Tourism Hub"
 KUB_tourism_hub_desc: "Finally, Kuban is now a tourist centre for people from many countries. Sea, Mountains, all this people can see in our Kuban."
-KUB_minister_of_agroculture: "Ministry of Agroculture"
-KUB_minister_of_agroculture_desc: "To control and improve the productivity and quality of products manufactured in the Krasnodar Region, a ministry was created "
+KUB_minister_of_agriculture: "Ministry of Agriculture"
+KUB_minister_of_agriculture_desc: "To control and improve the productivity and quality of products manufactured in the Krasnodar Region, a ministry was created "
 KUB_invest_farms: "Investments in Farms"
 KUB_invest_farms_desc: "By helping farmers in our region, we provide for them and show our support and gratitude for their work."
 KUB_support_locals: "Support for Local Producers"
@@ -4157,8 +4157,8 @@ KUB_purge_commies: "Purge Communists"
 KUB_purge_commies_desc: "Communists killed tradition and Kuban society in the 20th century. We will never forgive them for that!"
 KUB_support_domestic_production: "Support For Domestic Industry"
 KUB_support_domestic_production_desc: "Instead of buying other people's products and goods, we should support our own producers. Kuban industry must develop!"
-KUB_deburacratization: "Deburacratization"
-KUB_deburacratization_desc: "Bureaucracy is a past century, a mechanism that slows down the development of the state. It is necessary to fight bureaucracy and bureaucrats in general!"
+KUB_debureaucratization: "Debureaucratization"
+KUB_debureaucratization_desc: "Bureaucracy is a past century, a mechanism that slows down the development of the state. It is necessary to fight bureaucracy and bureaucrats in general!"
 KUB_anti_migration: "Anti-Migration Process"
 KUB_anti_migration_desc: "We don't need migrants, their orders, their rules. This is our land and our rules, and if you don't like it, suitcase, train station and get out of Kuban!"
 KUB_fight_corruption: "Fight With Corruption"
@@ -4219,7 +4219,7 @@ KUB_meet_with_regions_heads: "Support the leaders of Southern Regions of Russia"
 KUB_meet_with_regions_heads_desc: "By meeting with the leaders of the southern regions, we can coordinate our future actions in case of war."
 KUB_regular_army: "Creation of the Regular Army"
 KUB_regular_army_desc: "For possible future conflicts, a strong, regular army is needed, so now is the time to create one."
-KUB_referendum_south: "Referndum in Southern Russia"
+KUB_referendum_south: "Referendum in Southern Russia"
 KUB_referendum_south_desc: "In the 21st century, you don't have to shed blood, you can just hold a peaceful referendum where the people choose how they want to act."
 KUB_revolt_in_south: "Revolution in Southern Russia"
 KUB_revolt_in_south_desc: "We know that Russia is rigging the elections, so it is pointless to negotiate with it."
@@ -4244,8 +4244,8 @@ KUB_decentalisation: "Decentralisation"
 KUB_decentalisation_desc: "The state should not hold on to and depend on our centre."
 KUB_kuban_economy_system: "New Kuban Economy System"
 KUB_kuban_economy_system_desc: "The old economic system of Kuban was very much dependent on Russia. Our new state needs its own independent system."
-KUB_reduce_taxes_small_buisness: "Reduce Taxes on Small Buisneess "
-KUB_reduce_taxes_small_buisness_desc: "Small businesses make up a large part of our economy. In our situation, it is necessary to ease the pressure and taxes on small businesses"
+KUB_reduce_taxes_small_business: "Reduce Taxes on Small Business"
+KUB_reduce_taxes_small_business_desc: "Small businesses make up a large part of our economy. In our situation, it is necessary to ease the pressure and taxes on small businesses"
 KUB_free_markets: "Free Markets, Free People"
 KUB_free_markets_desc: "Free markets empower people to pursue their talents and give them the freedom to work hard, the freedom to have an opportunity, and even the freedom to fail."
 KUB_supress_nationalists: "Supress Nationalists"
@@ -4274,19 +4274,19 @@ KUB_opening_factories: "Opening Factories"
 KUB_opening_factories_desc: "The development of factories is the most important task of the Kuban economy in the near future."
 KUB_cooperation_with_russia: "Cooperation with Russia"
 KUB_cooperation_with_russia_desc: "We are closely linked to Russia economically, militarily, culturally. So why should we spoil relations with it?"
-KUB_buisness_rus: "Buisness with Russia"
-KUB_buisness_rus_desc: "Kuban and Russia are one and indivisible, and so is our joint business!"
+KUB_business_rus: "Business with Russia"
+KUB_business_rus_desc: "Kuban and Russia are one and indivisible, and so is our joint business!"
 KUB_rus_banks: "Russian Banks"
-KUB_rus_banks_desc: "Russian banks are slowly starting to enter the territory of our peninsula"
-KUB_military_exercises_with_russia_dems: "Millitary Exercises with Russia"
+KUB_rus_banks_desc: "Russian banks are slowly starting to enter the territory of our republic."
+KUB_military_exercises_with_russia_dems: "Military Exercises with Russia"
 KUB_military_exercises_with_russia_dems_desc: "The Russian army is one of the strongest in the world. So why don't we have an exercise with them?"
-KUB_rus_academies: "Russian Academies"
+KUB_rus_academies: "Russian Military Academies"
 KUB_rus_academies_desc: "Russian military academies are the best in the world. We can ask the Russians to accept our students and learn from their experience."
 KUB_adygea: "Adygea Question"
 KUB_adygea_desc: "Adygea has always been part of Kuban. We must give it back, but we must do it humanely through a referendum."
 KUB_anti_russia_policy: "Anti-Russian Policy"
 KUB_anti_russia_policy_desc: "Russia is an aggressor, and co-operation with it will not lead to good things. We need to convince our population of this."
-KUB_embargor_russia: "Embargo Againts Russia"
+KUB_embargor_russia: "Embargo Against Russia"
 KUB_embargor_russia_desc: "You don't have to trade with the aggressor. It is high time to impose sanctions on Russia for its aggressive policies."
 KUB_nato_membership: "NATO Membership Campaign"
 KUB_nato_membership_desc: "NATO is the most powerful alliance that ever existed. We need to join them to protect our citizens."
@@ -4320,15 +4320,15 @@ KUB_five_year_plan: "First Five Year Plan"
 KUB_five_year_plan_desc: "We need to start five-year plans to rebuild our industry"
 KUB_communist_education: "New Communist Education"
 KUB_communist_education_desc: "It is high time to improve the quality of our education, and to completely overhaul the school curriculum."
-KUB_nationalize_foreign_buisness: "Nationalisation of Foreign Buisness"
-KUB_nationalize_foreign_buisness_desc: "The capitalists let the foreigners in and now they can control a large part of our economy. It's time to end it."
+KUB_nationalize_foreign_business: "Nationalisation of Foreign Business"
+KUB_nationalize_foreign_business_desc: "The capitalists let the foreigners in and now they can control a large part of our economy. It's time to end it."
 KUB_new_economic_policy: "New Economic Policy "
 KUB_new_economic_policy_desc: "Communist economic policy will be the most successful and fair for Kuban"
 KUB_tax_reform: "Tax Reform"
 KUB_tax_reform_desc: "Lowering taxes for citizens is the fairest solution."
-KUB_infra_development: "Infrastructure Improvment"
+KUB_infra_development: "Infrastructure Improvement"
 KUB_infra_development_desc: "Our citizens should live in beautiful, modern cities."
-KUB_soviet_contst: "Soviet Constution"
+KUB_soviet_contst: "Soviet Constitution"
 KUB_soviet_contst_desc: "It is high time to reintroduce the world's most honest constitution - the Soviet constitution."
 KUB_reestablich_military_complex: "Reastablish Millitary Complex"
 KUB_reestablich_military_complex_desc: "Without our military-industrial complex, we won't survive for long. The revival of the military-industrial complex is the most important task of our party "
@@ -4346,7 +4346,7 @@ KUB_revive_black_sea_rep: "Revive the Black Sea Soviet Republic"
 KUB_revive_black_sea_rep_desc: "Our dream has finally come true. From Grozny to Rostov, people have united into one state."
 KUB_nationalist_in_jail: "Put Nationalist in Jail"
 KUB_nationalist_in_jail_desc: "Nationalists disturb the proletarian harmony of our society."
-KUB_anti_lgbt: "Anti LGBT Propoganda"
+KUB_anti_lgbt: "Anti LGBT Propaganda"
 KUB_anti_lgbt_desc: "LGBT is a disease."
 KUB_clean_social_network: "Clean Social Network"
 KUB_clean_social_network_desc: "Social media is filled with anti-Soviet and communist propaganda. This needs to be corrected quickly."
@@ -4359,8 +4359,8 @@ KUB_restalinisation_desc: "Stalin was a great leader and man. It was he who turn
 KUB_new_soviet_kuban: "New Soviet Kuban"
 KUB_new_soviet_kuban_desc: "The new Soviet Kuban is a combination of a just and happy society that is confident in its state and government and can always rely on it."
 KUB_unite_karachaevo: "Karachay Cherkessia"
-KUB_agroculture_commi: "Restoration of Agroculture"
-KUB_agroculture_commi_desc: "Our agri-culture was in decline in the 90s. Now is the time to rebuild our country and its most important sector, agro-culture."
+KUB_agriculture_commi: "Restoration of Agriculture"
+KUB_agriculture_commi_desc: "Our agriculture was in decline in the 90s. Now is the time to rebuild our country and its most important sector, agriculture."
 KUB_secpmd_five_year_plan: "Second Five-Year Plan"
 KUB_secpmd_five_year_plan_desc: "Despite the strong performance of the first five-year plan, we know we can do better. Forward to the victory of communism!"
 KUB_deconservatization: "Deconservation"
