--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -3156,7 +3156,7 @@
 
  ### Ural ###
  #Western
- URA.conservatism: "£URA_western_conserv (NDA) National Democratic Allience"
+ URA.conservatism: "£URA_western_conserv (NDA) National Democratic Alliance"
  URA.conservatism_icon: "£URA_western_conserv"
  URA.liberalism: "£URA_western_liberal (FU) Future of Ural"
  URA.liberalism_icon: "£URA_western_liberal"
