--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -3029,6 +3029,8 @@
  SOV_question_of_poland_desc: "In August 2014, Zhirinovsky threatened to carpet-bomb Poland."
  SOV_question_of_bavaria: "Bavarian Separatism"
  SOV_question_of_bavaria_desc: "We will support the desire of the Bavarian people to secede from Germany!."
+ SOV_question_of_genrih: "The German Monarchical Revolution"
+ SOV_question_of_genrih_desc: "We intend to overthrow the pathetic, rotten and corrupt German government and restore the Germans to their former greatness..as part of Russia, of course"
  SOV_question_of_east_german: "Recall the GDR"
  SOV_question_of_east_german_desc: "We will remind the residents of East Germany about the glorious past of the GDR"
  SOV_europe_pizda: "Preparing for the March to Europe"
@@ -3333,6 +3335,7 @@
  jirik_armenia_tt: "£text_icon_empire §YUnlocks§! §Y[ARM.GetFlag] Kingdom of Armenia§! Decisions"
  jirik_mongolia_tt: "£text_icon_empire §YUnlocks§! §Y[MON.GetFlag]Mongolian Governorate§! Decisions"
  jirik_bavaria_tt: "£text_icon_empire §YUnlocks§! §Gincrease§! of separatism in §Y[BAY.GetNameWithFlag]§! Decisions"
+ jirik_ger_monarch_tt: "§RMonarchical revolution§! will take place in §Y[GER.GetNameWithFlag]§! and the true heir to the throne of §Ythe German Empire§! will come to power"
  jirik_eastgermany_tt: "£text_icon_empire §YUnlocks§!  §Glowering§! the opinion of §YEast Germans§! about §Y[GER.GetNameWithFlag]§! Decisions"
  jirik_catalonia_tt: "£text_icon_empire §YUnlocks§! §Glowering§! the opinion of §YCatalonians§! about §Y[SPR.GetNameWithFlag]§! Decisions"
  jirik_andaluces_tt: "£text_icon_empire §YUnlocks§!  §Glowering§! the opinion of §YAndalusians§! about §Y[SPR.GetNameWithFlag]§! Decisions"
