--- a/Changelog.txt
+++ b/Changelog.txt
@@ -77,6 +77,7 @@ v1.10.5
   - Former NATO members should no longer be NATO members if they're subjects
 
  Content:
+  - NEW FOCUS TREES: Urals, Kuban
   - Added additional decisions to a variety of different internal factions
   - Added some new events to Internal Factions for the religious factions
   - Added the ability to "Accept All Reactor Grade Fuel Purchases"
@@ -98,12 +99,13 @@ v1.10.5
   - Changed the claims for Greater Serbia correcting including Croatia and Bosnia
   - Egypt can now boost Al-Nour Party
   - Russia: Rework of the Zhirinovsky tree
-  - Russia: Two new trees of the subjects - the Urals and the Kuban
+
 
  Database:
   - ADJUSTED PRODUCTIVITY: MIC, KOS, KAR, KAC, SHN, WAA, ABK, JUB, CHE, SOM, RYU
   - Added Precious Metals to Western Papua in Indonesia for the Grasberg Mine
   - Added a couple new Swedish generals and admirals
+  - St. Pierre (French state) now matches closer to French Guyana in terms of Productivity
 
  Game Rules:
   - Added a "120" day option to the European Union cooldown
