--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -1825,6 +1825,32 @@
 
  # FOPOL TRIGGERS
 
+
+ # LAKE WARS TRIGGERS
+
+ MLW_LW_city_twinning_available_check_TT: "§YCity Twinning§! has not occurred in §Y[?ROOT.MLW_LW_state_selected.GetName]§!"
+
+ MLW_LW_special_economic_zone_available_check_TNZ_TT: "§Y[MLW.GetNameWithFlag]§! has an active §YTrade Agreement§! with §Y[TNZ.GetNameWithFlag]§!"
+ MLW_LW_special_economic_zone_available_check_MOZ_TT: "§Y[MLW.GetNameWithFlag]§! has an active §YTrade Agreement§! with §Y[MOZ.GetNameWithFlag]§!"
+
+ MLW_LW_10_diplo_check_TT: "§GDiplomatic Progress§! in §Y[?ROOT.MLW_LW_state_selected.GetName]§! is at §YLevel 10§!"
+
+ MLW_LW_hybrid_warfare_border_patrols_TT_prefix: "§Y[?ROOT.MLW_LW_state_selected.GetName]§!'s border patrols are still active and are likely to be more vigilant for the foreseeable future, we can engage in §YHybrid Warfare§! again in approximately"
+ MLW_LW_hybrid_warfare_clear_for_migration_TT: "§Y[?ROOT.MLW_LW_state_selected.GetName]§!'s border patrols are not currently active, engaging in §YHybrid Warfare§! is possible in this area!"
+
+ MLW_LW_hybrid_warfare_available_check_1045_TT: "[MLW_LW_hybrid_warfare_MBEYA_check]"
+ MLW_LW_hybrid_warfare_border_patrols_1045_TT: "$MLW_LW_hybrid_warfare_border_patrols_TT_prefix$ [?MLW_LW_hybrid_warfare_1045_FLAG:days_left|Y0] days"
+
+ MLW_LW_hybrid_warfare_available_check_1046_TT: "[MLW_LW_hybrid_warfare_NJOMBE_check]"
+ MLW_LW_hybrid_warfare_border_patrols_1046_TT: "$MLW_LW_hybrid_warfare_border_patrols_TT_prefix$ [?MLW_LW_hybrid_warfare_1046_FLAG:days_left|Y0] days"
+
+ MLW_LW_hybrid_warfare_available_check_1047_TT: "[MLW_LW_hybrid_warfare_WESTRUVUMA_check]"
+ MLW_LW_hybrid_warfare_border_patrols_1047_TT: "$MLW_LW_hybrid_warfare_border_patrols_TT_prefix$ [?MLW_LW_hybrid_warfare_1047_FLAG:days_left|Y0] days"
+
+ MLW_LW_hybrid_warfare_available_check_1049_TT: "[MLW_LW_hybrid_warfare_WESTNIASSA_check]"
+ MLW_LW_hybrid_warfare_border_patrols_1049_TT: "$MLW_LW_hybrid_warfare_border_patrols_TT_prefix$ [?MLW_LW_hybrid_warfare_1049_FLAG:days_left|Y0] days"
+
+
  # GCC/GULF TRIGGERS
  MLW_GCC_no_leaseholders_TT: "No §YGCC§! member has §YLeaseholder§! rights within §Y[MLW.GetNameWithFlag]§!"
  # ZAMBIAN TRIGGERS
@@ -1977,6 +2003,10 @@
  MLW_LW_njombe_twin_TT: "Will make a §Ytwin city§! between §YNjombe§! in §Y[TNZ.GetNameWithFlag]§! and §YMzimba§! in §Y[MLW.GetNameWithFlag]§!"
  MLW_LW_westruvuma_twin_TT: "Will make a §Ytwin city§! between §YMbinga§! in §Y[TNZ.GetNameWithFlag]§! and §YKasungu§! in §Y[MLW.GetNameWithFlag]§!"
  MLW_LW_westniassa_twin_TT: "Will make a §Ytwin city§! between §YLichinga§! in §Y[MOZ.GetNameWithFlag]§! and §YDedza§! in §Y[MLW.GetNameWithFlag]§!"
+ MLW_LW_formal_annexation_TNZ_TT: "Sends an event to §Gpurchase§! §Y[?var:MLW_LW_state_selected.GetName]§! from §Y[TNZ.GetNameWithFlag]§!"
+ MLW_LW_formal_annexation_MOZ_TT: "Sends an event to §Gpurchase§! §Y[?var:MLW_LW_state_selected.GetName]§! from §Y[MOZ.GetNameWithFlag]§!"
+ MLW_LW_diplomatic_annexation_checker_TT: "Unlocks §YDiplomatic Annexation§! Decisions"
+ MLW_LW_militaristic_annexation_checker_TT: "Unlocks §YMilitarist Annexation§! Decisions"
  # SOUTH AFRICA EFFECT TOOLTIPS
  MLW_SAF_training_time_TT: "Modifies §Y$MLW_SAF_DM$§!: §Y$MODIFIER_TRAINING_TIME_FACTOR$§! by [?DM_training_time_change|%-2] (Current: [?MLW_SAF_training_time|%Y2])"
  MLW_SAF_max_training_TT: "Modifies §Y$MLW_SAF_DM$§!: §Y$MODIFIER_MAX_TRAINING_XP_FACTOR$§! by [?DM_max_training_change|%-2] (Current: [?MLW_SAF_max_training|%Y2])"
