fixed some other random bugs

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -77,6 +77,7 @@ v1.10.5
   - Former NATO members should no longer be NATO members if they're subjects
   - Fixed the Effective Consumer Goods Factories for the Ledger
   - Fixed unit leaders from other countries not being appropriately transferred during the formable nation formation
+  - Fixed random "Vacant" leaders being present in ELS, UZB
 
  Content:
   - NEW FOCUS TREES: Urals, Kuban
