--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -1528,7 +1528,7 @@
  DEN_wine_grow_tt_II: "Agricultural subsidies are crucial tools for supporting farmers, stabilizing food supplies, and promoting sustainable practices. And maybe in the end we will get a small profit."
 
  DEN_decision_Agriculture: "Agricultural subsidies"
- DEN_decision_Agriculture_desc: "Agricultural subsidies are financial aids provided by governments to support farmers and agribusinesses. These subsidies aim to stabilize food prices, ensure a steady food supply, promote agricultural productivity, and protect farmers' incomes.\n\n§YFarmer anger§!: [?ROOT.DEN_farmer_anger]%\n§YEnviromentalist Anger§!: [?ROOT.DEN_environmentalist_anger]%"
+ DEN_decision_Agriculture_desc: "Agricultural subsidies are financial aids provided by governments to support farmers and agribusinesses. These subsidies aim to stabilize food prices, ensure a steady food supply, promote agricultural productivity, and protect farmers' incomes.\n\n§YFarmer anger§!: [?ROOT.DEN_farmer_anger]%\n§YEnvironmentalist Anger§!: [?ROOT.DEN_environmentalist_anger]%"
  DEN_Subventions_for_Grain_decision: "Grain Subsidies"
  DEN_Subventions_for_Pigs_decision: "Livestock Subsidies"
  DEN_Subventions_for_Beef_decision: "Aquaculture Subsidies"
