--- a/localisation/english/MD_focus_SPR_l_english.yml
+++ b/localisation/english/MD_focus_SPR_l_english.yml
@@ -1686,7 +1686,7 @@ l_english:
  SPR_international_army_cooperation_upgrade_tt: "Improve §YInternational Army Cooperation§!, adding:\n"
  SPR_demand_the_rock_TT: "Demands §Y[19.GetName]§! from §Y[19.OWNER.GetNameWithFlag]§!.\n"
  SPR_solidify_the_iberian_union_tt: "All of §Y[POR.GetNameWithFlag]§!'s and §Y[ADO.GetNameWithFlag]§!'s states are cored by §Y[SPR.GetNameWithFlag]§!\n"
- SPR_deployed_regulares_tt: "Deployed Regular divisions under Regulares cap.\n"
+ SPR_deployed_regulares_tt: "Deployed Regular divisions under Regular divisions cap.\n"
  SPR_deployed_legion_tt: "Deployed Legion Tercios under Legion cap.\n"
  SPR_foreign_legion_upgrade_tt: "Increase the cap on §YForeign Legion Tercios§! by §G25%§!\n"
  SPR_regulares_upgrade_tt: "Increase the cap on §YRegular Brigades§! by §G25%§!\n"
