--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -686,6 +686,11 @@
  HOL_Carrier_Production.03.HOL.t: "Carrier Production Denied"
  HOL_Carrier_Production.03.HOL.d: "The United States has denied your request to begin production of the Gerald R. Ford Class carrier. You may try again in 30 days."
  HOL_Carrier_Production.03.HOL.a: "Acknowledge"
+ HOL_rheinmetall_stork.01.t: "Rheinmetall's Takeover of Stork MWV"
+ HOL_rheinmetall_stork.01.d: "Rheinmetall is proposing to take over Stork MWV. Should the Dutch government allow the takeover?"
+ HOL_rheinmetall_stork.01.a: "Allow the Rheinmetall Takeover"
+ HOL_rheinmetall_stork.01.b: "Block the Takeover"
+
  ### Decisions
  HOL_ING_Group_strategy_category: "ING Group Strategies"
  HOL_ING_Group_strategy_category_desc: "As global economic cycles shift between periods of growth and recession, ING Bank is poised to capitalize on these fluctuations. Through a series of calculated financial maneuvers, ING can extend its influence over national and international markets, steering both recovery efforts and expansion booms. These decisions offer the Netherlands the ability to leverage the bank's financial clout to stimulate growth, manage risk, and maximize investment returns. By strategically adjusting loan policies, boosting consumer spending, and expanding global trade networks, ING will not only strengthen its market position but also solidify the Netherlands' standing as a financial powerhouse."
@@ -726,6 +731,20 @@
  HOL_Establish_Marechaussee_Squad_desc: "The Marechaussee is a special military police force responsible for enforcing law and maintaining logistical operations. Establishing this unit will greatly improve both supply efficiency and suppression in our military operations."
 
  ### MIO
+ HOL_van_halteren_armor_manufacturer: "Van Halteren Defence"
+ HOL_van_halteren_armor_manufacturer_desc: "Van Halteren Defence, known for its expertise in the development of armored vehicle components and defense systems, provides cutting-edge solutions to modernize and enhance the capabilities of the Dutch armed forces."
+ HOL_Stork_PWV_armor_manufacturer: "Stork PWV"
+ HOL_Stork_PWV_armor_manufacturer_desc: "Stork PWV (Panserwielvoertuigen) has a long history of producing high-quality armored vehicles and defense systems, contributing to the protection and mobility of Dutch military personnel on the battlefield."
+ HOL_KNDS_Group_armor_manufacturer: "KNDS Group"
+ HOL_KNDS_Group_armor_manufacturer_desc: "KNDS Group, a European defense giant formed by the merger of Nexter and Krauss-Maffei Wegmann, supplies the Netherlands with state-of-the-art armored solutions, including tanks and other military vehicles."
+ HOL_Rheinmetall_Netherlands_armor_manufacturer: "Rheinmetall Netherlands"
+ HOL_Rheinmetall_Netherlands_armor_manufacturer_desc: "As a part of Rheinmetall AG, Rheinmetall Netherlands focuses on armored vehicle production, offering advanced technology and innovative defense systems for the Dutch military."
+ HOL_Damen_naval_equipment_organisation: "Damen Shipyards Group"
+ HOL_Damen_naval_equipment_organisation_desc: "Damen Shipyards Group is the leading Dutch naval manufacturer, specializing in the construction of frigates, corvettes, and support ships. Damen is a crucial player in maintaining and expanding the Dutch Navy’s capabilities."
+ HOL_Naval_Group_naval_equipment_organisation: "Naval Group"
+ HOL_Naval_Group_naval_equipment_organisation_desc: "Naval Group is a major partner of the Dutch naval industry, providing top-tier warships and submarine technology to the Royal Netherlands Navy. With decades of naval engineering expertise, Naval Group strengthens the Dutch fleet."
+ HOL_fokker_technologies_planes_manufacturer: "Fokker Technologies"
+ HOL_fokker_technologies_planes_manufacturer_desc: "Fokker Technologies is a renowned Dutch aircraft manufacturer, with a legacy of producing military and civilian planes. Known for its innovation in aerospace, Fokker continues to supply cutting-edge technology for the Dutch Air Force."
  HOL_daf_organization: "DAF (Van Doorne's Automobiel Fabriek)"
  HOL_daf_organization_desc: "Founded in 1928 in Eindhoven, DAF has grown from a small engineering workshop into a global leader in vehicle manufacturing. Renowned for its expertise in producing reliable and durable trucks, DAF has played a critical role in both military logistics and commercial transportation. Over the decades, DAF has earned a reputation for engineering excellence, specializing in heavy-duty vehicles designed for challenging conditions. As part of the PACCAR family since 1996, DAF continues to innovate, leveraging cutting-edge technologies and sustainable practices. Their vehicles are integral to global military logistics, providing dependable transportation solutions in any terrain. From armored personnel carriers like the YP-408 to their modern XG Series trucks, DAF’s contributions to military and civilian transportation are unmatched in both reliability and efficiency."
  DAF_mio_Eindhoven_Reliability: "Eindhoven Reliability"
