An ass ton of stuff
- Badakhsan mechanic
- Pan Iranist mechanic
- Pamir mechanic

--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -8232,6 +8232,10 @@
  SYR.Nat_Autocracy_desc: ""
  SUR.oligarchism: "£generic_oligarchism_small Primeiro Comando da Capital (PCC)"
  SUR.oligarchism_desc: ""
+ BDA.Mod_Vilayat_e_Faqih: "£TAJ_non_aligned_moderate_islamist  (LBS) Lali Badakhshan"
+ BDA.Mod_Vilayat_e_Faqih_desc: ""
+ TAJ.Mod_Vilayat_e_Faqih: "£TAJ_non_aligned_moderate_islamist  (LBS) Lali Badakhshan"
+ TAJ.Mod_Vilayat_e_Faqih_desc: ""
  TAJ.socialism: "£TAJ_western_social_democrat Hizbi Sotsial-Demokratii Tojikiston"
  TAJ.socialism_icon: "£TAJ_western_social_democrat"
  TAJ.socialism_desc: ""
