--- a/localisation/english/MD_autonomy_l_english.yml
+++ b/localisation/english/MD_autonomy_l_english.yml
@@ -39,6 +39,7 @@
  autonomy_oblast_rf: "Oblast"
  autonomy_okrug_rf: "Autonomous Okrug"
  autonomy_governorate_rf: "Governorate"
+ autonomy_irn_province: "Iranic Confederate"
 
  subject_hates: "Opinion of Overlord: Hatred"
  subject_hates_desc: "[Root.GetNameDef] has a deep hatred towards their overlord. It is likely that they will start a violent uprising soon unless the situation is mended."
